[package]
name = "vec_mut_scan"
version = "0.3.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "Forward scan over a vector with mutation and item removal"
repository = "https://github.com/jix/vec_mut_scan"
license = "0BSD"
readme = "README.md"
keywords = ["vec", "retain", "drain", "drain_filter"]
categories = ["algorithms", "data-structures"]

[dependencies]
